--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1040,6 +1040,28 @@ PB_AME_Expand_New_England_Industry_desc:0 "The expansion of military industry in
 PB_AME_Improved_Synthetic_Fabricators2:0 "Rare Metal Synthesis"
 PB_AME_Improved_Synthetic_Fabricators2_desc:0 "The creation of these synthetic metals will revolutionize many fields, including military and aerospace technology, as well as infrastructure and manufacturing. The United Commonwealth will become a leader in the production and application of these new materials, driving innovation and progress across the globe. The breakthrough will spark a new era of technological advancement and pave the way for even greater achievements in the future."
 
+PB_AME_Confederation_Spoils:0 "The Benefits of the Confederation"
+PB_AME_Confederation_Spoils_desc:0 "The Benefits of the Confederatio"
+PB_AME_The_Empire_Green_Heart:0 "Green Heart of the Confederaion"
+PB_AME_The_Empire_Green_Heart:0 "Green Heart of the Confederaion"
+PB_AME_Favors_in_HK:0 "Favors on the Pearl Delta"
+PB_AME_Favors_in_HK:0 "Favors on the Pearl Delta"
+PB_AME_Royal_Airline:0 "The Royal Airline"
+PB_AME_Royal_Airline:0 "The Royal Airline"
+PB_AME_Responsibiltiy_of_Automats_Crisis:0 "Who is responsible for all of this?"
+PB_AME_Company_War:0 "The Company Schism"
+PB_AME_Unify_Bahamas:0 "Unify the Bahamas"
+PB_AME_Protector_Caribean:0 "Protector of the Carribean"
+PB_AME_Rebuild_Acadia:0 "Take Care of Acadia"
+PB_AME_Anglois_Crisis:0 "The Anglois Crisis"
+PB_AME_Governor_Edward_Crisis:0 "Edwards Fumble"
+PB_AME_Governor_A_Course_of_Confrontation:0 "Confrontation"
+PB_AME_Governor_Two_Empires:0 "Partnership"
+PB_AME_Influence_the_Corrupt_Isles:0 "Influences in Isles"
+PB_AME_Together_Forever:0 "For Another 300 Years"
+PB_AME_The_New_Imperial_Master:0 "Rising like Byzantium"
+PB_AME_Abandon_the_Isles:0 "Abandoning the Tyranny"
+
 ##########################
 # MINISTERS
 ##########################
