china stuff and russian cultures

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -154,13 +154,13 @@ PB_Culture_Russopolish_tt:0 "Russopolish"
 PB_Culture_Lithuanian_tt:0 "Lithuanian"
 PB_Culture_Russian_tt:0 "Russian"
 PB_Culture_Siberian_tt:0 "Siberian"
-PB_Culture_Finno_Ugrian_tt:0 "Finno-Ugrian"
+PB_Culture_Finno_Ugrian_tt:0 "Komi"
 PB_Culture_Yakutian_tt:0 "Yakutian"
 PB_Culture_Volga_German_tt:0 "Volga-German"
 PB_Culture_Avarian_tt:0 "Avarian"
 PB_Culture_Kalmykian_tt:0 "Kalmykian"
 PB_Culture_Kubanian_tt:0 "Kubanian"
-PB_Culture_Circassian_tt:0 "Circassian"
+PB_Culture_Circassian_tt:0 "Adyghe"
 PB_Culture_Latvian_tt:0 "Latvian"
 PB_Culture_Estonian_tt:0 "Estonian"
 PB_Culture_Russobaltic_tt:0 "Russobaltic"
@@ -169,7 +169,7 @@ PB_Culture_Tatar_tt:0 "Tatar"
 PB_Culture_Bashkirian_tt:0 "Bashkirian"
 PB_Culture_Udmurtian_tt:0 "Udmurtian"
 PB_Culture_Nenet_tt:0 "Nenet"
-PB_Culture_Altaian_tt:0 "Altaian"
+PB_Culture_Altaian_tt:0 "Altaic"
 PB_Culture_Buryatian_tt:0 "Buryatian"
 PB_Culture_Uzbek_tt:0 "Uzbek"
 PB_Culture_Turkmen_tt:0 "Turkmen"
@@ -179,6 +179,9 @@ PB_Culture_Pontic_tt:0 "Pontic"
 PB_Culture_Azeri_tt:0 "Azeri"
 PB_Culture_Armenian_tt:0 "Armenian"
 PB_Culture_Georgian_tt:0 "Georgian"
+PB_Culture_Crimean_Tatar_tt:0 "Crimean"
+PB_Culture_Tuvan_tt:0 "Tuvan"
+PB_Culture_Khakas_tt:0 "Khakas"
 
 # SOUTH AMERICA #
 
@@ -552,6 +555,9 @@ PB_Culture_Pontic_tt_delayed:0 "The Pontic Greeks are a Greek people who live in
 PB_Culture_Azeri_tt_delayed:0 ""
 PB_Culture_Armenian_tt_delayed:0 ""
 PB_Culture_Georgian_tt_delayed:0 ""
+PB_Culture_Crimean_Tatar_tt_delayed:0 ""
+PB_Culture_Tuvan_tt_delayed:0 ""
+PB_Culture_Khakas_tt_delayed:0 ""
 
 # SOUTH AMERICA #
 
