--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -372,10 +372,61 @@
   CHI_ni_party:0 "NRG"
   CHI_ni_party_long:0 "National Righteousness Group"
 
+  ROC_jc_party:0 "Federationist Society"
+  ROC_jc_party_long:0 "Society for the Chinese Revolutionary Federation"
+  ROC_ss_party:0 "Federalists"
+  ROC_ss_party_long:0 "Federalist Party of China"
+  ROC_lb_party:0 "New Federalists"
+  ROC_lb_party_long:0 "New Federalist Party of China"
+  ROC_cn_party:0 "-"
+  ROC_cn_party_long:0 "-"
+  ROC_rc_party:0 "Disorganized Warlords"
+  ROC_rc_party_long:0 "Disorganized Warlords"
+  ROC_an_party:0 "QuadCom Interests"
+  ROC_an_party_long:0 "Interest Groups for the Quadrilateral Commission"
+  ROC_ds_party:0 "Disorganized Warlords"
+  ROC_ds_party_long:0 "Disorganized Warlords"
+  ROC_ni_party:0 "Neo-Boxers"
+  ROC_ni_party_long:0 "Fists of Harmony and Justice"
+
+  MAN_jc_party:0 "Federationist Resistance"
+  MAN_jc_party_long:0 "Federationist Resistance Forces in Manchuria"
+  MAN_ss_party:0 "-"
+  MAN_ss_party_long:0 ""
+  MAN_lb_party:0 "Liberation Forces of China (L)"
+  MAN_lb_party_long:0 "Army for the Liberation of China - Liberal Faction"
+  MAN_cn_party:0 "Harbin Mutual Assistance (I)"
+  MAN_cn_party_long:0 "Independence Faction of the Harbin Mutual Assistance Party"
+  MAN_rc_party:0 "Harbin Mutual Assistance (C)"
+  MAN_rc_party_long:0 "Collaborationist Faction of the Harbin Mutual Assistance Party"
+  MAN_an_party:0 "QuadCom Interests"
+  MAN_an_party_long:0 "Interest Groups for the Quadrilateral Commission"
+  MAN_ds_party:0 "Moscow Circle - Navy Clique"
+  MAN_ds_party_long:0 "Navy Clique Faction of the Moscow Circle in Harbin"
+  MAN_ni_party:0 "Moscow Circle - Harbin Faction"
+  MAN_ni_party_long:0 "Yusupov Faction of the Moscow Circle in Harbin"
+
+  SGH_jc_party:0 "Federationist Resistance"
+  SGH_jc_party_long:0 "Federationist Resistance Forces in the Quadrilateral Concessions"
+  SGH_ss_party:0 "Various Unions"
+  SGH_ss_party_long:0 "Various Unions"
+  SGH_lb_party:0 "QuadCom - American Faction"
+  SGH_lb_party_long:0 "Pro-American Faction of the Quadrilateral Commission"
+  SGH_cn_party:0 "QuadCom - British Faction"
+  SGH_cn_party_long:0 "Pro-British Faction of the Quadrilateral Commission"
+  SGH_rc_party:0 "QuadCom - German Faction"
+  SGH_rc_party_long:0 "Pro-German Faction of the Quadrilateral Commission"
+  SGH_an_party:0 "QuadCom - Edison Faction"
+  SGH_an_party_long:0 "EIEC Faction of the Quadrilateral Commission"
+  SGH_ds_party:0 "QuadCom - Multilateral Faction"
+  SGH_ds_party_long:0 "Multilateral Faction of the Quadrilateral Commission"
+  SGH_ni_party:0 "QuadCom - Ultraconcessionist Faction"
+  SGH_ni_party_long:0 "Ultraconcessionist Faction of the Quadrilateral Commissio"
+
   AME_jc_party:0 "URF"
   AME_jc_party_long:0 "United Republican Front"
   AME_ss_party:0 "NWP"
-  AME_ss_party_long:0 "National Workman’s Party:"
+  AME_ss_party_long:0 "National Workman’s Party"
   AME_lb_party:0 "Progress Party"
   AME_lb_party_long:0 "Progress Party"
   AME_cn_party:0 "FUP"
