--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -233,7 +233,7 @@
   PB_RUS_First_Five_Year_Plan:0 "Propose the First Five Year Plan"
   PB_RUS_Economic_Integrate_Poland:0 "Economic Integration with Poland"
   PB_RUS_Economic_Integrate_Baltic:0 "Economic Integration with the Baltics"
-  PB_RUS_Economic_Integrate_Caucasia:0 "Economic Integration with the Caucusus"
+  PB_RUS_Economic_Integrate_Caucasia:0 "Economic Integration with the Caucasus"
   PB_RUS_Economic_Integrate_Alaska:0 "Economic Integration with America"
 
   PB_RUS_Break_Ground_in_Alaska:0 "Break Ground in Alaska"
@@ -254,6 +254,20 @@
   PB_RUS_Project_Autojektor:0 "Project §rAUTOJEKTOR§!"
   PB_RUS_Project_Primordium:0 "Project §7PRIMORIDUM§!"
   PB_RUS_Project_Somnambulist:0 "Project §6SOMNAMBULIST§!"
+
+  PB_RUS_Russian_Language_Reform:0 "Addressing the Language Issue"
+  PB_RUS_Russian_Implement_Language_Reform:0 "Approve the Orthographic Reforms"
+  PB_RUS_Russian_Reject_Language_Reform:0 "Reject the Orthographic Reforms"
+  PB_RUS_Limited_National_Awakening:0 "A Managed National Awakening"
+  PB_RUS_Russian_Bilingualism:0 "Adopt Regional Bi-Lingualism"
+  PB_RUS_State_Enforced_Russian:0 "Enforce Russian Language Primacy"
+  PB_RUS_Russify_Poland:0 "Intensify Polish Russification"
+  PB_RUS_Three_Brothers_Policy:0 "Three Brothers Policy"
+  PB_RUS_Civilize_Islamic_Caucasia:0 "Civilize the Muhammadans"
+  PB_RUS_Promote_Greater_Armenism:0 "Co-Opt Greater Armenianism"
+  PB_RUS_Consolidate_Tsargrad:0 "Consolidate the Tsargrad Concession"
+
+  PB_RUS_Reopen_the_Capital:0 "End Martial Law in St. Petersburg"
 
 
   ########################## 
