--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2446,22 +2446,22 @@ PRU_an_ADJ:0 "Peruvian"
  ARU_cn_ADJ:0 "Patagonian"
  ARU_an_ADJ:0 "Patagonian"
 
- HAI_ni:0 "Hispaniola"
- HAI_ni_DEF:0 "the Republic of Hispaniola"
- HAI_ds:0 "Hispaniola"
- HAI_ds_DEF:0 "the Republic of Hispaniola"
- HAI_rc:0 "Hispaniola"
- HAI_rc_DEF:0 "the Republic of Hispaniola"
- HAI_an:0 "Hispaniola"
- HAI_an_DEF:0 "the Republic of Hispaniola"
- HAI_cn:0 "Hispaniola"
- HAI_cn_DEF:0 "the Republic of Hispaniola"
- HAI_lb:0 "Hispaniola"
- HAI_lb_DEF:0 "the Republic of Hispaniola"
- HAI_ss:0 "Hispaniola"
- HAI_ss_DEF:0 "the Republic of Hispaniola"
- HAI_jc:0 "Hispaniola"
- HAI_jc_DEF:0 "the Republic of Hispaniola"
+ HAI_ni:0 "Saint-Domingue"
+ HAI_ni_DEF:0 "the Republic of Saint-Domingue"
+ HAI_ds:0 "Saint-Domingue"
+ HAI_ds_DEF:0 "the Republic of Saint-Domingue"
+ HAI_rc:0 "Saint-Domingue"
+ HAI_rc_DEF:0 "the Republic of Saint-Domingue"
+ HAI_an:0 "Saint-Domingue"
+ HAI_an_DEF:0 "the Republic of Saint-Domingue"
+ HAI_cn:0 "Saint-Domingue"
+ HAI_cn_DEF:0 "the Republic of Saint-Domingue"
+ HAI_lb:0 "Saint-Domingue"
+ HAI_lb_DEF:0 "the Republic of Saint-Domingue"
+ HAI_ss:0 "Saint-Domingue"
+ HAI_ss_DEF:0 "the Republic of Saint-Domingue"
+ HAI_jc:0 "Saint-Domingue"
+ HAI_jc_DEF:0 "the Republic of Saint-Domingue"
  HAI_ni_ADJ:0 "Afro-Creole"
  HAI_rc_ADJ:0 "Afro-Creole"
  HAI_lb_ADJ:0 "Afro-Creole"
