--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1226,6 +1226,16 @@
   PB_ENG_Imperial_Reform_Reformist:0 "The Current Imperial Reform Outlook is §rREFORMIST§!"
   PB_ENG_Imperial_Reform_Neutral:0 "The Current Imperial Reform Outlook is §YNEUTRAL§!"
 
+
+  Imperial_Tension_Warning:0 "§RThis will increase Imperial Tension!§!"
+
+  ImpManagement_Acd_80_tt:0 "Acadian Alignment is greater then §b80%§!"
+
+  AME_Caribean_Power_Game:0 "§bWith great dominance and a rivaling fleet in the Imperial Confederation, we will try to assert our power over the rest of the Caribean.§!"
+
+  AME_Caribean_Power_Chance:0 "§YThe Chance of Success depends on your amount of Imperial Dominance, the Size of your Fleet and Imperial Tension.§!"
+
+
   ##########################
   # EVENTS
   ##########################
