--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -81,9 +81,9 @@ AME_Peacenik_Support_Government:0 "The £UC_SI_Peaceniks §YPeaceniks§! are §G
 AME_Peacenik_Neutral_Government:0 "The £UC_SI_Peaceniks §YPeaceniks§! are not §Yinfluential§! | §Y[?AME.AME_Peacenik_Support]%§!"
 AME_Peacenik_Dislike_Government:0 "The £UC_SI_Peaceniks §YPeaceniks§! are §Rdisempowered§! | §R[?AME.AME_Peacenik_Support]%§!"
 
-AME_Union_Support_Government:0 "The £UC_SI_Unions §YTrade Unions§! §Gsupport§! us | §G[?AME.AME_Union_Support]%§!"
-AME_Union_Neutral_Government:0 "The £UC_SI_Unions §YTrade Unions§! are §Yneutral§! toward us | §Y[?AME.AME_Union_Support]%§!"
-AME_Union_Dislike_Government:0 "The £UC_SI_Unions §YTrade Unions§! do not §Rsupport§! us | §R[?AME.AME_Union_Support]%§! | §R[?AME.trad_stability_variable]§!"
+AME_Union_Support_Government:0 "The £UC_SI_Unions §YTrade Unions§! §Gsupport§! us | §G[?AME.AME_Union_Support]%§! | §G[?AME.trad_stability_variable]§!"
+AME_Union_Neutral_Government:0 "The £UC_SI_Unions §YTrade Unions§! are §Yneutral§! toward us | §Y[?AME.AME_Union_Support]%§! | §Y[?AME.trad_stability_variable]§!"
+AME_Union_Dislike_Government:0 "The £UC_SI_Unions §YTrade Unions§! do not §Rsupport§! us | §R[?AME.AME_Union_Support]%§! | §R[?AME.trad_stability_variable]§! | §R[?AME.trad_effiency_variable]§!"
 
 AME_Megacorp_Support_Government:0 "The £UC_SI_Corporate §YMegacorporations§! §Gsupport§! us | §G[?AME.AME_Megacorp_Support]%§!"
 AME_Megacorp_Neutral_Government:0 "The £UC_SI_Corporate §YMegacorporations§! are §Yneutral§! toward us | §Y[?AME.AME_Megacorp_Support]%§!"
