Wait the America Remaster is actually happening?

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -55,39 +55,31 @@ PB_Operation_Screaming_Fist:0 "Operation SCREAMING FIST"
 PB_Operation_Power_Pack:0 "Operation POWER PACK"
 
 PB_AME_Domestic_Policy:0 "Managing Domestic Policy"
-PB_AME_Domestic_Policy_desc:0 "\n\n\n\n\n\nThe United Commonwealth's domestic policies are generally managed by supporting or discouraging particular interest groups. These groups maintain significant lobbying influence on their provincial and national parliaments, ergo keeping their favor is key for conducting the government as we desire. There are currently six major groups that hold influence in this manner.\n\nFreedmen represent the provinces primarily controlled by AfrRam groups, standing in opposition to the larger Southern lobby that controls most of the Old South.\n\nWarhawks represent the expansionist elements of the government, and keeping them empowered will allow us a freer hand in using force for diplomacy. Peaceniks, naturally, will attempt to restrain military action in diplomacy whenever possible.\n\nMegacorporations represent the influence of corporate groups on the Commonwealth, opposed by various trade unions. While the Unions lack the international influence of the Megacorps, they still represent a critical voting block for parliament.\n\n[get_freedmen_support]\n[get_freedmen_radicals]\n\n[get_dixie_support]\n[get_dixie_radicals]\n\n[get_warhawk_support]\n\n[get_peacenik_support]\n\n[get_megacorp_support]\n\n[get_union_support]\n"
+PB_AME_Domestic_Policy_desc:0 "\n\n\n\n\n\nThe United Commonwealth's domestic policies are generally managed by supporting or discouraging particular interest groups. These groups maintain significant lobbying influence on their provincial and national parliaments, ergo keeping their favor is key for conducting the government as we desire. There are currently six major groups that hold influence in this manner.\n\nFreedmen represent the provinces primarily controlled by AfrRam groups, standing in opposition to the larger Southern lobby that controls most of the Old South.\n\nWarhawks represent the expansionist elements of the government, and keeping them empowered will allow us a freer hand in using force for diplomacy. Peaceniks, naturally, will attempt to restrain military action in diplomacy whenever possible.\n\nMegacorporations represent the influence of corporate groups on the Commonwealth, opposed by various trade unions. While the Unions lack the international influence of the Megacorps, they still represent a critical voting block for parliament.\n\n[get_freedmen_support]\n\n[get_dixie_support]\n\n[get_warhawk_support]\n\n[get_peacenik_support]\n\n[get_megacorp_support]\n\n[get_union_support]\n"
 
-AME_Freedmen_Support_Government:0 "The £UC_SI_Freedmen §YFreedmen§! §Gsupport§! us | §G[?AME.AME_Freedmen_Support]%§!"
-AME_Freedmen_Neutral_Government:0 "The £UC_SI_Freedmen §YFreedmen§! are §Yneutral§! toward us | §Y[?AME.AME_Freedmen_Support]%§!"
-AME_Freedmen_Dislike_Government:0 "The £UC_SI_Freedmen §YFreedmen§! do not §Rsupport§! us | §R[?AME.AME_Freedmen_Support]%§!"
+AME_Freedmen_Support_Government:0 "The £UC_SI_Freedmen §YFreedmen§! are §Gloyal§! to us | §G[?AME.AME_Freedmen_Support]%§! | £GFX_pol_power §G[?AME.free_political_variable]%§! | £GFX_civ_factory_output §G[?AME.free_core_variable]%§!"
+AME_Freedmen_Neutral_Government:0 "The £UC_SI_Freedmen §YFreedmen§! are §Yneutral§! towards us | §Y[?AME.AME_Freedmen_Support]%§! | £GFX_pol_power §Y[?AME.free_political_variable]%§! | £GFX_civ_factory_output §Y[?AME.free_core_variable]%§!"
+AME_Freedmen_Dislike_Government:0 "The £UC_SI_Freedmen §YFreedmen§! are not §Rloyal§! towards us | §R[?AME.AME_Freedmen_Support]%§! | £GFX_pol_power §R[?AME.free_political_variable]%§! | £GFX_civ_factory_output §R[?AME.free_core_variable]%§!"
 
-#AME_Freedmen_Not_Radicalized:0 "The §YFreedmen§! are not §Gradicalized§! | §G[?AME.AME_Freedmen_Radicalization]%§!"
-#AME_Freedmen_Neutral_Radicalism:0 "The §YFreedmen§! are §Yneutral§! towards radicalism | §Y[?AME.AME_Freedmen_Radicalization]%§!"
-#AME_Freedmen_Radicalized:0 "The §YFreedmen§! are §Rradicalized§! | §R[?AME.AME_Freedmen_Radicalization]%§!"
-#
-#AME_Southerners_Not_Radicalized:0 "The §YSoutherners§! are not §Gradicalized§! | §G[?AME.AME_Dixie_Radicalization]%§!"
-#AME_Southerners_Neutral_Radicalism:0 "The §YSoutherners§! are §Yneutral§! towards radicalism | §Y[?AME.AME_Dixie_Radicalization]%§!"
-#AME_Southerners_Radicalized:0 "The  §YSoutherners§! are §Rradicalized§! | §R[?AME.AME_Dixie_Radicalization]%§!"
+AME_Dixie_Support_Government:0 "The £UC_SI_Southerners §YSoutherners§! are §Gloyal§! to us | §G[?AME.AME_Dixie_Support]%§! | £GFX_civ_factory_output §G[?AME.south_construct_variable]%§! | £GFX_stability_texticon §G[?AME.south_stab_variable]%§!"
+AME_Dixie_Neutral_Government:0 "The £UC_SI_Southerners §YSoutherners§! are §Yneutral§! towards us | §Y[?AME.AME_Dixie_Support]%§! | £GFX_civ_factory_output §Y[?AME.south_construct_variable]%§! | £GFX_stability_texticon §Y[?AME.south_stab_variable]%§!"
+AME_Dixie_Dislike_Government:0 "The £UC_SI_Southerners §YSoutherners§! are not §Rloyal§! towards us | §R[?AME.AME_Dixie_Support]%§! | £GFX_civ_factory_output §R[?AME.south_construct_variable]%§! | £GFX_stability_texticon §R[?AME.south_stab_variable]%§!"
 
-AME_Dixie_Support_Government:0 "The £UC_SI_Southerners §YSoutherners§! §Gsupport§! us | §G[?AME.AME_Dixie_Support]%§!"
-AME_Dixie_Neutral_Government:0 "The £UC_SI_Southerners §YSoutherners§! are §Yneutral§! toward us | §Y[?AME.AME_Dixie_Support]%§!"
-AME_Dixie_Dislike_Government:0 "The £UC_SI_Southerners §YSoutherners§! do not §Rsupport§! us | §R[?AME.AME_Dixie_Support]%§!"
+AME_Warhawk_Support_Government:0 "The £UC_SI_Warhawks §YWarhawks§! are §Gempowered§! | §G[?AME.AME_Warhawk_Support]%§! | £GFX_pol_power §G[?AME.warha_waspp_variable]%§! | £GFX_civ_factory_output §G[?AME.warha_fac_variable]%§!"
+AME_Warhawk_Neutral_Government:0 "The £UC_SI_Warhawks §YWarhawks§! are not §Yinfluential§! | §Y[?AME.AME_Warhawk_Support]%§! | £GFX_pol_power §Y[?AME.warha_waspp_variable]%§! | £GFX_civ_factory_output §Y[?AME.warha_fac_variable]%§!"
+AME_Warhawk_Dislike_Government:0 "The £UC_SI_Warhawks §YWarhawks§! are §Rdisempowered§! | §R[?AME.AME_Warhawk_Support]%§! | £GFX_pol_power §R[?AME.warha_waspp_variable]%§! | £GFX_civ_factory_output §R[?AME.warha_fac_variable]%§!"
 
-AME_Warhawk_Support_Government:0 "The £UC_SI_Warhawks §YWarhawks§! are §Gempowered§! | §G[?AME.AME_Warhawk_Support]%§!"
-AME_Warhawk_Neutral_Government:0 "The £UC_SI_Warhawks §YWarhawks§! are not §Yinfluential§! | §Y[?AME.AME_Warhawk_Support]%§!"
-AME_Warhawk_Dislike_Government:0 "The £UC_SI_Warhawks §YWarhawks§! are §Rdisempowered§! | §R[?AME.AME_Warhawk_Support]%§!"
+AME_Peacenik_Support_Government:0 "The £UC_SI_Peaceniks §YPeaceniks§! are §Gempowered§! | §G[?AME.AME_Peacenik_Support]%§! | £GFX_pol_power §G[?AME.peace_political_variable]%§! | £GFX_stability_texticon §G[?AME.peace_stab_variable]%§!"
+AME_Peacenik_Neutral_Government:0 "The £UC_SI_Peaceniks §YPeaceniks§! are not §Yinfluential§! | §Y[?AME.AME_Peacenik_Support]%§! | £GFX_pol_power §Y[?AME.peace_political_variable]%§! | £GFX_stability_texticon §Y[?AME.peace_stab_variable]%§!"
+AME_Peacenik_Dislike_Government:0 "The £UC_SI_Peaceniks §YPeaceniks§! are §Rdisempowered§! | §R[?AME.AME_Peacenik_Support]%§! | £GFX_pol_power §R[?AME.peace_political_variable]%§! | £GFX_stability_texticon §R[?AME.peace_stab_variable]%§!"
 
-AME_Peacenik_Support_Government:0 "The £UC_SI_Peaceniks §YPeaceniks§! are §Gempowered§! | §G[?AME.AME_Peacenik_Support]%§!"
-AME_Peacenik_Neutral_Government:0 "The £UC_SI_Peaceniks §YPeaceniks§! are not §Yinfluential§! | §Y[?AME.AME_Peacenik_Support]%§!"
-AME_Peacenik_Dislike_Government:0 "The £UC_SI_Peaceniks §YPeaceniks§! are §Rdisempowered§! | §R[?AME.AME_Peacenik_Support]%§!"
+AME_Union_Support_Government:0 "The £UC_SI_Unions §YTrade Unions§! §Gsupport§! us | §G[?AME.AME_Union_Support]%§! | £GFX_stability_texticon §G[?AME.trad_stability_variable]%§! | £GFX_prod_eff §G[?AME.trad_effiency_variable]%§!"
+AME_Union_Neutral_Government:0 "The £UC_SI_Unions §YTrade Unions§! are §Yneutral§! toward us | §Y[?AME.AME_Union_Support]%§! | £GFX_stability_texticon §Y[?AME.trad_stability_variable]%§! | £GFX_prod_eff §Y[?AME.trad_effiency_variable]%§!"
+AME_Union_Dislike_Government:0 "The £UC_SI_Unions §YTrade Unions§! do not §Rsupport§! us | §R[?AME.AME_Union_Support]%§! | £GFX_stability_texticon §R[?AME.trad_stability_variable]%§! | £GFX_prod_eff §R[?AME.trad_effiency_variable]%§!"
 
-AME_Union_Support_Government:0 "The £UC_SI_Unions §YTrade Unions§! §Gsupport§! us | §G[?AME.AME_Union_Support]%§! | §G[?AME.trad_stability_variable]§!"
-AME_Union_Neutral_Government:0 "The £UC_SI_Unions §YTrade Unions§! are §Yneutral§! toward us | §Y[?AME.AME_Union_Support]%§! | §Y[?AME.trad_stability_variable]§!"
-AME_Union_Dislike_Government:0 "The £UC_SI_Unions §YTrade Unions§! do not §Rsupport§! us | §R[?AME.AME_Union_Support]%§! | §R[?AME.trad_stability_variable]§! | §R[?AME.trad_effiency_variable]§!"
-
-AME_Megacorp_Support_Government:0 "The £UC_SI_Corporate §YMegacorporations§! §Gsupport§! us | §G[?AME.AME_Megacorp_Support]%§!"
-AME_Megacorp_Neutral_Government:0 "The £UC_SI_Corporate §YMegacorporations§! are §Yneutral§! toward us | §Y[?AME.AME_Megacorp_Support]%§!"
-AME_Megacorp_Dislike_Government:0 "The £UC_SI_Corporate §YMegacorporations§! do not §Rsupport§! us | §R[?AME.AME_Megacorp_Support]%§!"
+AME_Megacorp_Support_Government:0 "The £UC_SI_Corporate §YMegacorporations§! §Gsupport§! us | §G[?AME.AME_Megacorp_Support]%§! | £GFX_research_icon §G[?AME.mega_research_variable]%§! | £GFX_prod_eff_cap §G[?AME.mega_cap_variable]%§!"
+AME_Megacorp_Neutral_Government:0 "The £UC_SI_Corporate §YMegacorporations§! are §Yneutral§! toward us | §Y[?AME.AME_Megacorp_Support]%§! | £GFX_research_icon §Y[?AME.mega_research_variable]%§! | £GFX_prod_eff_cap §Y[?AME.mega_cap_variable]%§!"
+AME_Megacorp_Dislike_Government:0 "The £UC_SI_Corporate §YMegacorporations§! do not §Rsupport§! us | §R[?AME.AME_Megacorp_Support]%§! | £GFX_research_icon §R[?AME.mega_research_variable]%§! | £GFX_prod_eff_cap §R[?AME.mega_cap_variable]%§!"
 
 PB_AME_Increase_Southerner_Support_tt:0 "Support from the £UC_SI_Southerners §YSoutherners§! will §Gincrease!§!\n\n"
 PB_AME_Decrease_Southerner_Support_tt:0 "Support from the £UC_SI_Southerners §YSoutherners§! will §Rdecrease!§!\n\n"
@@ -441,6 +433,11 @@ AME_EIEC_decrease_industrial_capacity_factory_gain_high_tt:0 "§RDecreases§! §
 
 
 PB_AME_Trade_Union:0 "Trade Union Support"
+PB_AME_Mega_corps:0 "Megacorporations Support"
+PB_AME_Peace_Niks:0 "Peaceniks Empowerment"
+PB_AME_War_Hawks:0 "Warhawks Empowerment"
+PB_AME_Southerns_SS:0 "Southerns Loyalty"
+PB_AME_Freedman_SS:0 "Freedman Loyality"
 
 PB_Social_Engineering_Modifier:0 "§YSocial Engineering§!"
 
