--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -411,19 +411,20 @@
   ##########################
   # BALANCE OF POWER
   ##########################  
-  RUS_power_balance:0 "The War for the Soul of Russia"
-  RUS_Militarist_Side:0 "The Moscow Circle"
-  RUS_Duma_Side:0 "The National Duma"
-  RUS_balance_range:0 "No Dominant Faction"
-  RUS_Duma_Side_low_control_range:0 "Low National Duma Authority"
-  RUS_Duma_Side_medium_control_range:0 "Moderate National Duma Authority"
-  RUS_Duma_Side_high_control_range:0 "High National Duma Authority"
-  RUS_Duma_Side_total_control_range:0 "Absolute National Duma Authority"
+  RUS_power_balance:0 "The War of the Sciences"
+  RUS_Lysenkoist_Side:0 "The Lysenkoist School"
+  RUS_Teslaist_Side:0 "The Teslaite School"
+  RUS_balance_range:0 "No Dominant School"
 
-  RUS_Militarist_Side_low_control_range:0 "Low Moscow Circle Influence"
-  RUS_Militarist_Side_medium_control_range:0 "Significant Moscow Circle Influence"
-  RUS_Militarist_side_high_control_range:0 "Pervasive Moscow Circle Influence"
-  RUS_Militarist_Side_control_range:0 "Overwhelming Moscow Circle Influence"
+  RUS_Lysenkoist_Side_low_control_range:0 "Limited Lysenkoist Influence"
+  RUS_Lysenkoist_Side_medium_control_range:0 "Moderate Lysenkoist Influence"
+  RUS_Lysenkoist_Side_high_control_range:0 "High Lysenkoist Influence"
+  RUS_Lysenkoist_Side_total_control_range:0 "Lysenkoist Theory Dominant"
+
+  RUS_Teslaist_Side_low_control_range:0 "Limited Tesla School Influence"
+  RUS_Teslaist_Side_medium_control_range:0 "Significant esla School Influence"
+  RUS_Teslaist_Side_high_control_range:0 "Pervasive esla School Influence"
+  RUS_Teslaist_Side_control_range:0 "Tesla School Theory Dominant"
 
 
 
