--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -2938,7 +2938,8 @@ PB_EGY_sudanese_rebels:0 "Sudanese Rebels"
 PB_EGY_sudanese_rebels_desc:0 "After the divison of Africa by the Europeans, the territories of Sudan and Darfur were handed over to Egypt. Even though the Egyptians and Sudanese share many cultural similarities, the Sudanese are not happy with their current predicament and wish to be given either independence or some autonomy within Egypt."
 PB_BHU_hermit_kingdom:0 "The Hermit Kingdom"
 PB_BHU_hermit_kingdom_desc:0 "On the fringes of the Himalayan mountain range lay an almost unknown kingdom. Bhutan, now known as the hermit kingdom, is a country that lacks far behind the rest of the world in terms of mostly everything. It has good relations with Britain and its Indian domains, the British domains are also their biggest trading partners."
-
+PB_KRD_militia_army:0 "Kurdish Milita Army"
+PB_KRD_militia_army_desc:0 "Because of the precarious situation of Kurdistan in the current moment, it has been decided that we should fill the ranks of our military high command with leaders who previously lead rebellious militia, and have the most experience in warfare."
 
 
 
