Damn thats a big load of cocaine

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1163,6 +1163,9 @@
   EA_England_Side_high_control_range:0 "Significant British Masterism"
   EA_England_Side_control_range:0 "Total British Dominance"
 
+  PB_ENG_Imperial_Tension_Category:0 "A Dangerous Game"
+  PB_ENG_Imperial_Tension_Category_desc:0 "\n\n\n\n\n\n\n\nImperial Tension is currently at §O[?global.ENG_Empire_Tension]%§!\n\nOnce Imperial Dominance reaches 60% on either side a timer (50-100 days) will start which will continuesly increase the tension if the dominance stays within that range. Tension can also increase with events / focuses or other shit (throwing tea into the sea for example).\n\nWhen Imperial Tension reaches 90% decisions become available for America and England. These decisions become avaiable to the side that does not have Imperial Dominance (if Harmony then decisions locked and you might a chance to save it still). For America this will be 2 decisions either Indepedence or Rival England. For England its simple bring back America into the fold. As clicking on these decisions will start the Imperial civil. If the ai (the opposing side) has the option to click them, they instantly will. If you are the weak side its your own free will to click (maybe you dont want a civil war and damage the Empire beyond Repair). for the player (UK or AME their goal should be to do their Imperial Last Focuses which decide their future fates. the benefit of doing them compared to letting a Civil War happen is obvious (no war) however they take ofc longer and are most costly (u choose whats in it for you)."
+
   PAX_Confederation_Struggle_Decisions_Flag_England:0 "An Aligned Decision has not been taken"
 
 
@@ -1228,12 +1231,6 @@
 
 
   Imperial_Tension_Warning:0 "§RThis will increase Imperial Tension!§!"
-
-  ImpManagement_Acd_80_tt:0 "Acadian Alignment is greater then §b80%§!"
-
-  AME_Caribean_Power_Game:0 "§bWith great dominance and a rivaling fleet in the Imperial Confederation, we will try to assert our power over the rest of the Caribean.§!"
-
-  AME_Caribean_Power_Chance:0 "§YThe Chance of Success depends on your amount of Imperial Dominance, the Size of your Fleet and Imperial Tension.§!"
 
 
   ##########################
