--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1013,6 +1013,30 @@
   PBNews.255.b:0 "Good riddance."
   PBNews.255.c:0 "These accusations are outrageous!"
 
+  PBNews.256.t:0 "OLYMPIC GAMES OPEN IN BERN"
+  PBNews.256.d:0 "The ninth Olympic games opened in Bern this morning, with experts expecting yet another tense competition between France and Germany after the previous Tsargrad Olympics in 1929. Notably, teams representing both the Republic of Japan and the exiled Empire of Japan were permitted by the committee to play, although were barred from direct competition.\n\nControversy still simmers however over the issue of augmented athletes, with legal issues ongoing after the Committee barred an augmented member of the German shooting team from playing due to having had their arm replaced in the Great War."
+  PBNews.256.a:0 "Switzerland of all places?"
+
+  PBNews.257.t:0 "OLYMPIC GAMES IN CARNEGIA"
+  PBNews.257.d:0 "The tenth Olympic games opened today in New Alexandria, capital of the Carnegian Commonwealth, making it the second constituent commonwealth to hold the games. Amid rising tensions in Europe, New Alexandria secured a bid to host the games over Amsterdam and Seoul, although complaints have arisen that the Saharan climate may be too extreme for outdoor sports.\n\nProtests abound during the games, largely from Carnegia’s imported workforce of native Africans, most of which have been barred from attending games in-person due to the nation’s race laws."
+  PBNews.257.a:0 "They took the summer part a bit too seriously."
+
+  PBNews.258.t:0 "TIME EMISSARY, VOLUME TWO"
+  PBNews.258.d:0 "Hitting the shelves today is the second volume of J.R.R Tolkien’s “Time Emissary” series, following up on the previous volumes published by Weird Tales in 1930. Taking place in the year 2147, the plot follows a coalition of interstellar empires fighting for control of a ringed galaxy. In the second volume, the Aman Fellowship continues their campaign to defeat the Fallen Emperor Morgoth, who plans to unite the galactic ring and rule all existence.\n\nThis marks Tolkien’s first major publication since breaking with Weird Tales, supposedly due to creative conflicts with the company’s late editor, Howard Lovecraft."
+  PBNews.258.a:0 "Can't wait for part three."
+
+  PBNews.259.t:0 "R.U.R PREMIERES IN FRANKFURT"
+  PBNews.259.d:0 "After nearly eight years in production, Fritz Lang’s adaption of the Czech play “Rossum’s Universal Robots” was premiered to German audiences. The film follows the creation of the first robots through to their overthrow of humanity, with the last man on Earth left enslaved to the robots. With a nearly three-hour runtime, the film has proven exceptionally divisive in both the German and international markets.\n\nThe movie has completely bombed in the Anglosphere, with audiences upset at the film’s hopeful depiction of post-human society in light of the ongoing, very real Automation Crises."
+  PBNews.259.a:0 "Three hours might be a bit long."
+
+  PBNews.260.t:0 "LIFE ON MARS?"
+  PBNews.260.d:0 "In a press release, the International Astronomical Society released a statement that they had detected anomalous lights emanating from the Martain surface. The implications of this remain unclear, however, and most reputable astronomers have stated that the incident was likely caused by some form of gas expulsion.\n\nDespite this, some fringe theorists remain unconvinced of the rational explanation and have taken to wild speculation, claiming that Mars is inhabited by everything from aliens to mole people or dinosaurs."
+  PBNews.260.a:0 "The chances of anything being on Mars are a million to one!"
+
+  PBNews.261.t:0 "MOKELE-MBEMBE KILLED"
+  PBNews.261.d:0 "John Henry Patterson, notable for bagging the infamous Tsavo Man-Eaters of Kenya, presented to reporters in New Alexandria the infamous Mokele-mbembe. Originally released as part of a big game hunting event in 1922, the creature was a biologically modified animal intended to resemble a large dinosaur, largely so that those hunting could claim to have killed one.\n\nAfter escaping the hunting grounds in the German Congo, the creature became an urban legend for nearly a decade until now, where it is now expected to be stuffed and mounted for a Carnegian museum."
+  PBNews.261.a:0 "That one's going on the wall."
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
