--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -1,12 +1,14 @@
-﻿  l_english:
+﻿l_english:
 
  cat_terror_weapons:0 "Terror Weapons"
  flamethrowers_tech:0 "Flamethrowers"
  cyberdogs_tech:0 "Panzer Hounds"
  shockjockey_tech:0 "Shock Jockey Tech"
  cat_augmented_infantry:0 "Augmented Infantry"
- infantry_drugs:0 "Military-Grade Drugs"
+ infantry_drugs_research:0 "Military-Grade Drugs"
  automat:0 "Automats"
+ automat_research:0 "Automats"
+ cat_bioaugmented_unit_research:0 "Biomodified Units"
  
  infantry_equipment_1933:0 "Interwar Infantry Equipment"
  infantry_equipment_1933_short:0 "Interwar Eq."
