--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -2069,7 +2069,7 @@ PB_AME_RevFlag_Option_1:0 "£UC_RevFlag_1"
 PB_AME_RevFlag_Option_2:0 "£UC_RevFlag_2"
 PB_AME_RevFlag_Option_3:0 "£UC_RevFlag_3"
 
-Imp_War_AME_Total_Vic_tt:0 "Has not §RNOT§! been victorious in the Imperial Civil War"
+Imp_War_AME_Total_Vic_tt:0 "Has §RNOT§! been victorious in the Imperial Civil War"
 
 AME_Suppressed_Agitation_tt:0 "§YAgitation from the Southern States and Freedmen will be temporarily suppressed.§!"
 AME_Suppressed_Unions_tt:0 "§YAgitation from the Unions will be temporarily suppressed.§!"
