--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8747,8 +8747,8 @@ SAN_an_ADJ:0 "Indian"
  PAL_DEF:0 "Palestine"
  PAL_ADJ:0 "Palestinean" 
 
- BAH:0 "the Bahamas"
- BAH_DEF:0 "the Republic of the Bahamas"
+ BAH:0 "Republic of the Bahamas"
+ BAH_DEF:0 "Republic of the Bahamas"
  BAH_ADJ:0 "Bahamian"
  
  CUB:0 "Cuba"
@@ -9085,6 +9085,10 @@ ERI_ADJ:0 "Ertitrean"
 TAN:0 "Tuvan Republic"
 TAN_DEF:0 "Tuvan Republic"
 TAN_ADJ:0 "Tuvan"
+
+MLD:0 "Republic Of The Maldives"
+TAN_DEF:0 "Republic Of The Maldives"
+TAN_ADJ:0 "Maldivian"
 
 ###################################
 # TEMPLATE
