I am the antichrist

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -9087,8 +9087,8 @@ TAN_DEF:0 "Tuvan Republic"
 TAN_ADJ:0 "Tuvan"
 
 MLD:0 "Republic Of The Maldives"
-TAN_DEF:0 "Republic Of The Maldives"
-TAN_ADJ:0 "Maldivian"
+MLD_DEF:0 "Republic Of The Maldives"
+MLD_ADJ:0 "Maldivian"
 
 ###################################
 # TEMPLATE
