--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -249,8 +249,8 @@
   PB_ImpMan_Increase_IRE_AME_Influence_tt:0 "Ireland will become more §bAmerican Aligned§!"
   PB_ImpMan_Increase_IRE_ENG_Influence_tt:0 "Ireland will become more §rBritish Aligned§!"
 
-  PB_ImpMan_Increase_HNK_AME_Influence_tt:0 "Hong Kong and Macau will become more §bAmerican Aligned§!"
-  PB_ImpMan_Increase_HNK_ENG_Influence_tt:0 "Hong Kong and Macau will become more §rBritish Aligned§!"
+  PB_ImpMan_Increase_HNK_AME_Influence_tt:0 "Pearl River Dominion will become more §bAmerican Aligned§!"
+  PB_ImpMan_Increase_HNK_ENG_Influence_tt:0 "Pearl River Dominion will become more §rBritish Aligned§!"
 
   PB_ImpMan_Increase_BAF_AME_Influence_tt:0 "West Africa will become more §bAmerican Aligned§!"
   PB_ImpMan_Increase_BAF_ENG_Influence_tt:0 "West Africa will become more §rBritish Aligned§!"
@@ -270,9 +270,27 @@
   PB_Imp_90_Tension_Limit:0 "Imperial Tension is over §Y90%§!"
   PB_Imp_90_Tension_Limit_Under:0 "Imperial Tension is under §Y90%§!"
 
+  PB_Imp_20_Tension_Limit:0 "Imperial Tension is over §Y20%§!"
+
   PB_Imp_Commonwealths_Decide_AME:0 "You will side with America in the coming revolution and join the Coalition of Independent States"
 
   PB_Imp_Commonwealths_Decide_ENG:0 "You will side with Britain in the coming revolution"
 
   PB_BAF_CON:0 "The British African Authority has been dissolved"
   PB_BAF_REF:0 "The British African Authority has been dissolved"
+
+
+  # Anglois Crisis 
+
+  PM_Anglois_Crisis_Mission:0 "  §RFate of the Anglois Provinces§!"
+
+  what_if_angloiscrisis_fails_tt:0 "§RIf the United Commenwealth gets no concessions at all, Imperial Tension would skyrocket and potentially lead quickly to war!§!"
+
+  fate_cavelier_tt:0 "Cavelier will go to [anglois_cavelier_status]"
+  fate_wisconsion_tt:0 "Wisconsin will go to [anglois_wisconsin_status]"
+  fate_michigan_tt:0 "Michigan will go to [anglois_michigan_status]"
+  fate_huron_tt:0 "Huron will go to [anglois_huron_status]"
+  fate_superieur_tt:0 "Superieur will go to [anglois_superieur_status]"
+
+  PB_Cavelier_American:0 "[AME.GetFlag]§RUnited Commenwealth§!"
+  PB_Cavelier_Quebec:0 "[QUE.GetFlag]§BQuebec§!"
