Small Prussia push

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -107,6 +107,7 @@
   off_map_civ_tooltip:0 "Add §G+1§! offmap §YCivilian Factory§!"
   junker_support_tooltip:0 "  - Agroponics Complex output: §G+2§! £GFX_grain"
   PB_PRS_Out_With_The_Fanatics_tt:0 "Modify §YJunker Aristocracy§! by\nLeader Skill Bonuses: §G+15.0%§!"
+  PRS_Trade_Tooltip:0 "Every democractic nation will gain an additional §G+50§! trade relations with §YPrussia§!"
 
   ##########################
   # MECHANICS
@@ -360,6 +361,8 @@
   PB_PRS_Lingering_Extremism_3:0 "Lingering Extremism"
 
   PB_PRS_Imperial_Restoration:0 "Imperial Restoration"
+
+  PB_PRS_Influx_Of_Exiles:0 "Influx Of Exiles"
 
   ##########################
   # Ministers/Generals/Tech Teams
@@ -694,6 +697,28 @@
   PB_PRS_Imperial_Militias_desc:0 ""
   PB_PRS_The_Kingdom_Is_Whole:0 "The Kingdom Is Whole"
   PB_PRS_The_Kingdom_Is_Whole_desc:0 ""
+  PB_PRS_The_Last_One_Standing:0 "The Last One Standing"
+  PB_PRS_The_Last_One_Standing_desc:0 ""
+  PB_PRS_David_And_Goliath:0 "David And Goliath"
+  PB_PRS_David_And_Goliath_desc:0 ""
+  PB_PRS_Emergency_War_Time_Measures:0 "Emergency War Time Measures"
+  PB_PRS_Emergency_War_Time_Measures_desc:0 ""
+  PB_PRS_Establish_Contacts_In_Occupied_Germany:0 "Establish Contacts In Occupied Germany"
+  PB_PRS_Establish_Contacts_In_Occupied_Germany_desc:0 ""
+  PB_PRS_Annihilation_Of_The_Self:0 "Annihilation Of The Self"
+  PB_PRS_Annihilation_Of_The_Self_desc:0 ""
+  PB_PRS_Total_Defense:0 "Total Defense"
+  PB_PRS_Total_Defense_desc:0 ""
+  PB_PRS_Savage_Resistance:0 "Savage Resistance"
+  PB_PRS_Savage_Resistance_desc:0 ""
+  PB_PRS_Request_Scandinavian_Arms:0 "Request Scandinavian Arms"
+  PB_PRS_Request_Scandinavian_Arms_desc:0 ""
+  PB_PRS_The_Pactes_Last_Conquest:0 "The Pacte's Last Conquest"
+  PB_PRS_The_Pactes_Last_Conquest_desc:0 ""
+  PB_PRS_Restore_The_Kingdoms:0 "Restore The Kingdoms"
+  PB_PRS_Restore_The_Kingdoms_desc:0 ""
+  PB_PRS_Germany_United:0 "Germany United"
+  PB_PRS_Germany_United_desc:0 ""
 
 
   ##########################
