--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -108,7 +108,9 @@
   junker_support_tooltip:0 "  - Agroponics Complex output: §G+2§! £GFX_grain"
   PB_PRS_Out_With_The_Fanatics_tt:0 "Modify §YJunker Aristocracy§! by\nLeader Skill Bonuses: §G+15.0%§!"
   PRS_Trade_Tooltip:0 "Every democractic nation will gain an additional §G+50§! trade relations with §YPrussia§!"
-
+  PB_PRS_The_Last_One_Standing_tt:0 "\nWe must holdout against the Pacte for 250 days if we wish to prove ourselves as the legitimate German state.\n\nYou must complete all the below focuses while at war with the Pacte if you wish to inherit the remains of Habsburg Germany."
+  PB_PRS_Germany_United_tt:0 "Once France is defeated you will gain control over all French occupied regions in Germany, same for Russia as well.\n\n"
+ 
   ##########################
   # MECHANICS
   ##########################
@@ -364,6 +366,8 @@
 
   PB_PRS_Influx_Of_Exiles:0 "Influx Of Exiles"
 
+  PB_PRS_Surrounded_On_All_Sides:0 "Surrounded On All Sides"
+
   ##########################
   # Ministers/Generals/Tech Teams
   ##########################
@@ -601,8 +605,8 @@
   PB_PRS_A_New_Path_desc:0 ""
   PB_PRS_The_First_Citizens:0 "The First Citizens"
   PB_PRS_The_First_Citizens_desc:0 ""
-  PB_PRS_Forged_In_Fire:0 "Forged In Fire"
-  PB_PRS_Forged_In_Fire_desc:0 ""
+  PB_PRS_Promote_Shared_Heritage:0 "Promote Shared Heritage"
+  PB_PRS_Promote_Shared_Heritage_desc:0 ""
   PB_PRS_Revert_The_Great_Rot:0 "Revert The Great Rot"
   PB_PRS_Revert_The_Great_Rot_desc:0 ""
   PB_PRS_A_Just_Hand:0 "A Just Hand"
