--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8749,6 +8749,10 @@ SAN_an_ADJ:0 "Indian"
  BAH:0 "the Bahamas"
  BAH_DEF:0 "the Republic of the Bahamas"
  BAH_ADJ:0 "Bahamian"
+
+ SAF:0 "Kaapkolonie"
+ SAF_DEF:0 "the Kaapkolonie"
+ SAF_ADJ:0 "Kaapkoloniaal"
  
  CUB:0 "Cuba"
  CUB_DEF:0 "the Republic of Cuba"
